--- a/app/src/main/res/layout-v28/activity_listcard.xml
+++ b/app/src/main/res/layout-v28/activity_listcard.xml
@@ -95,7 +95,7 @@
                 android:id="@+id/textView8"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
+                android:layout_marginTop="@dimen/View4dp"
                 android:text="@string/Searching"
                 android:textColor="@color/text_gray"
                 android:textSize="12dp"
@@ -108,8 +108,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginRight="20dp"
+                android:layout_marginTop="@dimen/View8dp"
+                android:layout_marginRight="@dimen/View20dp"
                 android:gravity="center"
                 android:textColor="@color/text_gray"
                 android:textSize="14dp"
