--- a/app/src/main/res/layout-v28/activity_login.xml
+++ b/app/src/main/res/layout-v28/activity_login.xml
@@ -14,8 +14,8 @@
         android:ems="10"
         android:hint="Email"
         android:inputType="textEmailAddress"
-        android:layout_marginRight="10dp"
-        android:layout_marginLeft="10dp"
+        android:layout_marginRight="@dimen/View8dp"
+        android:layout_marginLeft="@dimen/View8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.508"
         app:layout_constraintStart_toStartOf="parent"
@@ -25,9 +25,9 @@
         android:id="@+id/Edit_L_password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginLeft="10dp"
+        android:layout_marginTop="@dimen/View16dp"
+        android:layout_marginRight="@dimen/View8dp"
+        android:layout_marginLeft="@dimen/View8dp"
         android:ems="10"
         android:hint="Password"
         android:inputType="textPassword"
