--- a/app/src/main/res/layout-v28/activity_main.xml
+++ b/app/src/main/res/layout-v28/activity_main.xml
@@ -13,10 +13,10 @@
         android:id="@+id/frame"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="4dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="4dp"
+        android:layout_marginStart="@dimen/View8dp"
+        android:layout_marginTop="@dimen/View4dp"
+        android:layout_marginEnd="@dimen/View8dp"
+        android:layout_marginBottom="@dimen/View4dp"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout17"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -86,10 +86,10 @@
                 android:id="@+id/textView8"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
+                android:layout_marginTop="@dimen/View4dp"
                 android:text="@string/Searching"
                 android:textColor="@color/text_gray"
-                android:textSize="12dp"
+                android:textSize="@dimen/Text12sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/anime2" />
@@ -99,11 +99,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginRight="20dp"
+                android:layout_marginTop="@dimen/View8dp"
+                android:layout_marginRight="@dimen/View20dp"
                 android:gravity="center"
                 android:textColor="@color/text_gray"
-                android:textSize="14dp"
+                android:textSize="@dimen/Text14sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView8" />
@@ -128,9 +128,9 @@
             android:id="@+id/dislike_button"
             android:layout_width="56dp"
             android:layout_height="56dp"
-            android:layout_marginRight="30dp"
-            android:layout_marginBottom="8dp"
-            android:layout_marginLeft="30dp"
+            android:layout_marginRight="@dimen/View32dp"
+            android:layout_marginBottom="@dimen/View8dp"
+            android:layout_marginLeft="@dimen/View32dp"
             app:iconTint="@null"
             app:icon="@drawable/ic_close2"
             app:iconSize="24dp"
@@ -148,8 +148,8 @@
             android:id="@+id/star_button"
             android:layout_width="56dp"
             android:layout_height="56dp"
-            android:layout_marginRight="30dp"
-            android:layout_marginBottom="8dp"
+            android:layout_marginRight="@dimen/View32dp"
+            android:layout_marginBottom="@dimen/View8dp"
             app:iconTint="@null"
             app:icon="@drawable/ic_star"
             app:iconSize="24dp"
@@ -167,8 +167,8 @@
             android:id="@+id/like_button"
             android:layout_width="56dp"
             android:layout_height="56dp"
-            android:layout_marginRight="30dp"
-            android:layout_marginBottom="8dp"
+            android:layout_marginRight="@dimen/View32dp"
+            android:layout_marginBottom="@dimen/View8dp"
             app:iconTint="@null"
             app:icon="@drawable/ic_heart"
             app:iconSize="24dp"
