--- a/app/src/main/res/layout-v28/activity_profile.xml
+++ b/app/src/main/res/layout-v28/activity_profile.xml
@@ -53,7 +53,7 @@
                     android:layout_alignParentBottom="true"
                     android:layout_centerHorizontal="true"
                     android:layout_gravity="center"
-                    android:layout_marginBottom="4dp"
+                    android:layout_marginBottom="@dimen/View4dp"
                     android:orientation="horizontal"
                     app:layout_constraintBottom_toBottomOf="@+id/slide_main"
                     app:layout_constraintEnd_toEndOf="@+id/slide_main"
@@ -83,19 +83,19 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
-                    android:paddingLeft="20dp"
-                    android:paddingTop="10dp"
-                    android:paddingRight="10dp"
-                    android:paddingBottom="10dp">
+                    android:paddingLeft="@dimen/View20dp"
+                    android:paddingTop="@dimen/View8dp"
+                    android:paddingRight="@dimen/View8dp"
+                    android:paddingBottom="@dimen/View8dp">
 
                     <TextView
                         android:id="@+id/name_profile"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginRight="10dp"
+                        android:layout_marginRight="@dimen/View8dp"
 
                         android:textColor="@color/c2"
-                        android:textSize="20dp"
+                        android:textSize="@dimen/Text20sp"
                         android:textStyle="bold" />
 
                     <TextView
@@ -104,7 +104,7 @@
                         android:layout_height="wrap_content"
 
                         android:textColor="@color/c2"
-                        android:textSize="20dp" />
+                        android:textSize="@dimen/Text20sp" />
 
                 </LinearLayout>
 
@@ -126,14 +126,14 @@
                     android:layout_height="wrap_content"
 
                     android:orientation="horizontal"
-                    android:paddingLeft="20dp"
-                    android:paddingRight="10dp"
-                    android:paddingBottom="5dp">
+                    android:paddingLeft="@dimen/View20dp"
+                    android:paddingRight="@dimen/View8dp"
+                    android:paddingBottom="@dimen/View4dp">
 
                     <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="30dp"
-                        android:layout_marginRight="5dp"
+                        android:layout_marginRight="@dimen/View4dp"
                         android:layout_gravity="top"
                         android:src="@drawable/ic_person_outline_black_24dp" />
 
@@ -145,7 +145,7 @@
 
 
                         android:textColor="@color/text_black_gray"
-                        android:textSize="16dp" />
+                        android:textSize="@dimen/View16dp" />
 
                 </LinearLayout>
 
@@ -167,15 +167,15 @@
                     android:layout_height="wrap_content"
 
                     android:orientation="horizontal"
-                    android:paddingLeft="20dp"
+                    android:paddingLeft="@dimen/View20dp"
 
-                    android:paddingRight="10dp"
-                    android:paddingBottom="5dp">
+                    android:paddingRight="@dimen/View8dp"
+                    android:paddingBottom="@dimen/View4dp">
 
                     <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="30dp"
-                        android:layout_marginRight="5dp"
+                        android:layout_marginRight="@dimen/View4dp"
                         android:layout_gravity="top"
                         android:src="@drawable/ic_work_black_24dp" />
 
@@ -186,7 +186,7 @@
                         android:gravity="center_vertical"
 
                         android:textColor="@color/text_black_gray"
-                        android:textSize="16dp" />
+                        android:textSize="@dimen/Text16sp" />
 
                 </LinearLayout>
 
@@ -206,15 +206,15 @@
                     android:layout_height="wrap_content"
 
                     android:orientation="horizontal"
-                    android:paddingLeft="20dp"
+                    android:paddingLeft="@dimen/View20dp"
 
-                    android:paddingRight="10dp"
-                    android:paddingBottom="5dp">
+                    android:paddingRight="@dimen/View8dp"
+                    android:paddingBottom="@dimen/View4dp">
 
                     <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="30dp"
-                        android:layout_marginRight="5dp"
+                        android:layout_marginRight="@dimen/View4dp"
                         android:layout_gravity="top"
                         android:src="@drawable/ic_school_black_24dp" />
 
@@ -225,7 +225,7 @@
                         android:gravity="center_vertical"
 
                         android:textColor="@color/text_black_gray"
-                        android:textSize="16dp" />
+                        android:textSize="@dimen/Text16sp" />
 
                 </LinearLayout>
 
@@ -247,14 +247,14 @@
 
 
                     android:orientation="horizontal"
-                    android:paddingLeft="20dp"
-                    android:paddingRight="10dp"
-                    android:paddingBottom="10dp">
+                    android:paddingLeft="@dimen/View20dp"
+                    android:paddingRight="@dimen/View8dp"
+                    android:paddingBottom="@dimen/View8dp">
 
                     <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="30dp"
-                        android:layout_marginRight="5dp"
+                        android:layout_marginRight="@dimen/View4dp"
                         android:layout_gravity="top"
                         android:src="@drawable/ic_location_on_black_24dp" />
 
@@ -265,7 +265,7 @@
                         android:gravity="center_vertical"
 
                         android:textColor="@color/text_black_gray"
-                        android:textSize="16dp" />
+                        android:textSize="@dimen/Text16sp" />
 
                 </LinearLayout>
 
@@ -287,24 +287,24 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:paddingLeft="20dp"
-                    android:paddingTop="10dp"
-                    android:paddingRight="10dp"
+                    android:paddingLeft="@dimen/View20dp"
+                    android:paddingTop="@dimen/View8dp"
+                    android:paddingRight="@dimen/View8dp"
                     android:text="@string/about_me"
                     android:textColor="#000000"
-                    android:textSize="16dp" />
+                    android:textSize="@dimen/Text16sp" />
 
                 <TextView
                     android:id="@+id/myself_profile"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:paddingLeft="20dp"
-                    android:paddingTop="5dp"
-                    android:paddingRight="10dp"
-                    android:paddingBottom="10dp"
+                    android:paddingLeft="@dimen/View20dp"
+                    android:paddingTop="@dimen/View4dp"
+                    android:paddingRight="@dimen/View8dp"
+                    android:paddingBottom="@dimen/View8dp"
 
                     android:textColor="@color/text_gray"
-                    android:textSize="16dp" />
+                    android:textSize="@dimen/Text16sp" />
 
 
             </LinearLayout>
@@ -325,25 +325,25 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:paddingLeft="20dp"
-                    android:paddingTop="10dp"
-                    android:paddingRight="10dp"
+                    android:paddingLeft="@dimen/View20dp"
+                    android:paddingTop="@dimen/View8dp"
+                    android:paddingRight="@dimen/View8dp"
                     android:text="@string/language"
                     android:textColor="#000000"
-                    android:textSize="16dp" />
+                    android:textSize="@dimen/Text16sp" />
 
                 <TextView
                     android:id="@+id/language_profile"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:paddingLeft="20dp"
-                    android:paddingTop="5dp"
-                    android:paddingRight="10dp"
-                    android:paddingBottom="10dp"
+                    android:paddingLeft="@dimen/View20dp"
+                    android:paddingTop="@dimen/View4dp"
+                    android:paddingRight="@dimen/View8dp"
+                    android:paddingBottom="@dimen/View8dp"
 
                     android:textColor="@color/text_gray"
                     android:gravity="left"
-                    android:textSize="16dp" />
+                    android:textSize="@dimen/Text16sp" />
 
 
             </LinearLayout>
@@ -363,24 +363,24 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:paddingLeft="20dp"
-                    android:paddingTop="10dp"
-                    android:paddingRight="10dp"
+                    android:paddingStart="@dimen/View20dp"
+                    android:paddingTop="@dimen/View8dp"
+                    android:paddingEnd="@dimen/View8dp"
                     android:text="@string/religion"
                     android:textColor="#000000"
-                    android:textSize="16dp" />
+                    android:textSize="@dimen/Text16sp" />
 
                 <TextView
                     android:id="@+id/religion_profile"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:paddingLeft="20dp"
-                    android:paddingTop="5dp"
-                    android:paddingRight="10dp"
-                    android:paddingBottom="10dp"
+                    android:paddingStart="@dimen/View20dp"
+                    android:paddingTop="@dimen/View4dp"
+                    android:paddingEnd="@dimen/View8dp"
+                    android:paddingBottom="@dimen/View8dp"
                     android:textColor="@color/text_gray"
 
-                    android:textSize="16dp" />
+                    android:textSize="@dimen/Text16sp" />
 
 
             </LinearLayout>
@@ -400,12 +400,12 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:paddingLeft="20dp"
-                    android:paddingTop="10dp"
-                    android:paddingRight="10dp"
+                    android:paddingLeft="@dimen/View20dp"
+                    android:paddingTop="@dimen/View8dp"
+                    android:paddingRight="@dimen/View8dp"
                     android:text="@string/Interests"
                     android:textColor="#000000"
-                    android:textSize="16dp" />
+                    android:textSize="@dimen/Text16sp" />
 
                 <com.google.android.flexbox.FlexboxLayout xmlns:android="http://schemas.android.com/apk/res/android"
                     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -413,10 +413,10 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_alignParentBottom="true"
-                    android:paddingLeft="20dp"
-                    android:paddingTop="5dp"
-                    android:paddingRight="10dp"
-                    android:paddingBottom="10dp"
+                    android:paddingLeft="@dimen/View20dp"
+                    android:paddingTop="@dimen/View4dp"
+                    android:paddingRight="@dimen/View8dp"
+                    android:paddingBottom="@dimen/View8dp"
                     app:alignContent="flex_start"
                     app:alignItems="flex_start"
                     app:flexWrap="wrap" />
@@ -430,7 +430,7 @@
                 android:layout_height="wrap_content"
                 android:background="@color/background_white"
                 android:orientation="vertical"
-                android:paddingBottom="30dp" />
+                android:paddingBottom="@dimen/View32dp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -448,8 +448,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="10dp"
-        android:layout_marginBottom="10dp"
+        android:layout_marginEnd="@dimen/View8dp"
+        android:layout_marginBottom="@dimen/View8dp"
         android:clickable="true"
         android:background="@color/c2"
         app:srcCompat="@drawable/ic_mode_edit_black_24dp" />
