--- a/app/src/main/res/layout/activity_switch_page.xml
+++ b/app/src/main/res/layout/activity_switch_page.xml
@@ -45,7 +45,7 @@
             android:layout_height="50dp"
             android:src="@drawable/ic_candy_cane"/>
         <TextView
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="@dimen/View8dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/loading"
