--- a/app/src/main/res/layout/activity_verify_.xml
+++ b/app/src/main/res/layout/activity_verify_.xml
@@ -49,8 +49,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
 
-            android:layout_marginLeft="30dp"
-            android:layout_marginRight="30dp"
+            android:layout_marginLeft="@dimen/View32dp"
+            android:layout_marginRight="@dimen/View32dp"
             android:text="@string/otp"
             android:textColor="@color/text_black_gray"
             android:textSize="@dimen/Text24sp" />
@@ -59,10 +59,10 @@
             android:id="@+id/commend"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="30dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginRight="30dp"
-            android:layout_marginBottom="40dp"
+            android:layout_marginLeft="@dimen/View32dp"
+            android:layout_marginTop="@dimen/View8dp"
+            android:layout_marginRight="@dimen/View32dp"
+            android:layout_marginBottom="@dimen/View40dp"
             android:gravity="center"
             android:textAlignment="center"
             android:text="@string/Application_has_sent"
@@ -74,8 +74,8 @@
             style="@style/PinWidget.PinView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="50dp"
-            android:layout_marginRight="50dp"
+            android:layout_marginLeft="52dp"
+            android:layout_marginRight="52dp"
             android:inputType="number"
             android:textColor="@color/c2"
             android:textSize="@dimen/Text20sp"
@@ -89,8 +89,8 @@
             android:id="@+id/button8"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:layout_marginTop="40dp"
+            android:layout_marginBottom="@dimen/View8dp"
+            android:layout_marginTop="@dimen/View40dp"
             android:text="@string/next_button"
             android:textColor="@color/cpb_white"
             android:textSize="@dimen/Text16sp" />
