--- a/app/src/main/res/layout-v28/activity_chat.xml
+++ b/app/src/main/res/layout-v28/activity_chat.xml
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:layout_alignParentTop="true"
-        android:padding="5dp"
+        android:padding="@dimen/View4dp"
         android:elevation="2dp"
         android:background="@color/background_white"
         app:layout_constraintTop_toTopOf="parent">
@@ -23,7 +23,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="right"
-            android:layout_marginStart="5dp"
+            android:layout_marginStart="@dimen/View4dp"
             android:src="@drawable/ic_arrow_back_black2_24dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -33,7 +33,7 @@
             android:id="@+id/pre_Image_porfile"
             android:layout_width="45dp"
             android:layout_height="45dp"
-            android:layout_marginStart="10dp"
+            android:layout_marginStart="@dimen/View8dp"
             app:civ_border_color="#11000000"
             app:civ_border_width="2dp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -45,9 +45,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginStart="16dp"
+            android:layout_marginStart="@dimen/View16dp"
             android:textColor="@color/text_black_gray"
-            android:textSize="20dp"
+            android:textSize="@dimen/Text20sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@+id/pre_Image_porfile"
             app:layout_constraintTop_toTopOf="parent" />
@@ -57,7 +57,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="right"
-            android:layout_marginEnd="16dp"
+            android:layout_marginEnd="@dimen/View8dp"
             android:src="@drawable/ic_more_vert_black_24dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -95,7 +95,7 @@
         android:layout_alignParentBottom="true">
 
     <LinearLayout
-        android:padding="5dp"
+        android:padding="@dimen/View4dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
@@ -107,7 +107,7 @@
             android:layout_gravity="center"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:layout_marginRight="5dp"
+            android:layout_marginRight="@dimen/View4dp"
             android:background="@drawable/ic_apps_black_24dp"/>
 
 
@@ -135,7 +135,7 @@
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:layout_weight="1"
-                android:layout_marginRight="4dp"
+                android:layout_marginRight="@dimen/View4dp"
                 android:src= "@drawable/ic_image_chat"/>
 
             <ImageView
@@ -143,7 +143,7 @@
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:layout_weight="1"
-                android:layout_marginRight="4dp"
+                android:layout_marginRight="@dimen/View4dp"
                 android:src="@drawable/ic_photo_camera_black_24dp" />
             <ImageView
                 android:id="@+id/record_audio"
@@ -151,26 +151,26 @@
                 android:layout_height="30dp"
                 android:layout_weight="1"
                 android:layout_gravity="center"
-                android:layout_marginRight="4dp"
+                android:layout_marginRight="@dimen/View4dp"
                 android:src="@drawable/ic_mic_black_24dp" />
         </LinearLayout>
         <LinearLayout
             android:id="@+id/test56"
-            android:layout_marginEnd="5dp"
+            android:layout_marginEnd="@dimen/View4dp"
             android:layout_gravity="center"
             android:background="@drawable/rounded_real"
-            android:padding="5dp"
+            android:padding="@dimen/View4dp"
             android:layout_width="match_parent"
             android:layout_weight="1.5"
             android:layout_height="wrap_content">
 
             <com.jabirdeveloper.tinderswipe.CustomEdittext
-                android:layout_marginStart="10dp"
+                android:layout_marginStart="@dimen/View8dp"
                 android:id="@+id/message"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@null"
-                android:textSize="18dp"
+                android:textSize="@dimen/Text16sp"
                 android:hint="Message..." />
 
         </LinearLayout>
@@ -178,7 +178,7 @@
             android:id="@+id/oval_send"
 
             android:backgroundTint="#E1F6FA"
-            android:padding="8dp"
+            android:padding="@dimen/View8dp"
             android:layout_width="wrap_content"
             android:layout_gravity="center"
             android:layout_height="wrap_content">
