--- a/app/src/main/res/layout-v28/activity_choose_login_registration.xml
+++ b/app/src/main/res/layout-v28/activity_choose_login_registration.xml
@@ -38,7 +38,7 @@
 
             android:letterSpacing="0.085"
             android:textColor="@color/text_black_gray"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="@dimen/View8dp"
 
             />
         <TextView
@@ -51,7 +51,7 @@
             android:textColor="@color/text_black_gray"
             android:textSize="18dp"
 
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="@dimen/View20dp"
             />
         <LinearLayout
             android:id="@+id/testlogin"
@@ -59,19 +59,19 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="@dimen/View8dp"
             android:gravity="center"
             >
             <Button
                 android:id="@+id/button3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="10dp"
-                android:layout_marginRight="20dp"
-                android:paddingRight="30dp"
-                android:paddingLeft="30dp"
-                android:translationZ="4dp"
+                android:layout_marginTop="@dimen/View8dp"
+                android:layout_marginBottom="@dimen/View8dp"
+                android:layout_marginRight="@dimen/View20dp"
+                android:paddingRight="@dimen/View32dp"
+                android:paddingLeft="@dimen/View32dp"
+                android:translationZ="@dimen/View4dp"
                 android:background="@drawable/myrect"
                 android:text="เข้าสู่ระบบ"
 
@@ -81,11 +81,11 @@
                 android:id="@+id/button4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="10dp"
-                android:paddingRight="30dp"
-                android:paddingLeft="30dp"
-                android:layout_marginLeft="20dp"
+                android:layout_marginTop="@dimen/View8dp"
+                android:layout_marginBottom="@dimen/View8dp"
+                android:paddingRight="@dimen/View32dp"
+                android:paddingLeft="@dimen/View32dp"
+                android:layout_marginStart="@dimen/View20dp"
                 android:translationZ="4dp"
                 android:background="@drawable/myrect"
                 android:text="สมัครสมาชิก"
@@ -99,9 +99,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:layout_marginRight="20dp"
+            android:layout_marginRight="@dimen/View20dp"
             android:layout_marginLeft="20dp"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="@dimen/View32dp"
             android:gravity="center"
             >
             <View
@@ -114,9 +114,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Login with"
-                android:textSize="18dp"
+                android:textSize="@dimen/Text16sp"
                 android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp"
+                android:layout_marginRight="@dimen/View20dp"
 
 
                 android:textColor="@color/text_black_gray"
@@ -136,7 +136,7 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:gravity="center"
-            android:layout_marginTop="40dp"
+            android:layout_marginTop="@dimen/View40dp"
             >
             <ImageView
                 android:id="@+id/face"
@@ -148,8 +148,8 @@
                 android:id="@+id/google"
                 android:layout_width="45dp"
                 android:layout_height="45dp"
-                android:layout_marginRight="40dp"
-                android:layout_marginLeft="40dp"
+                android:layout_marginRight="@dimen/View32dp"
+                android:layout_marginLeft="@dimen/View32dp"
                 android:clickable="false"
                 android:src="@drawable/ic_search"/>
             <ImageView
@@ -170,7 +170,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="@dimen/View8dp"
         android:orientation="horizontal"
         android:gravity="center"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -184,22 +184,22 @@
             android:text="Language"
             android:textSize="18dp"
             android:textColor="@color/text_black_gray"
-            android:layout_marginRight="10dp"/>
+            android:layout_marginRight="@dimen/View8dp"/>
         <TextView
             android:id="@+id/thai_lang"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="ไทย"
-            android:textSize="16dp"
+            android:textSize="@dimen/Text16sp"
             android:textColor="@color/c4"
             />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="|"
-            android:textSize="16dp"
+            android:textSize="@dimen/Text16sp"
             android:layout_marginLeft="5dp"
-            android:layout_marginRight="5dp"
+            android:layout_marginRight="@dimen/View4dp"
             android:textColor="@color/text_black_gray"
             />
         <TextView
@@ -207,7 +207,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="English"
-            android:textSize="16dp"
+            android:textSize="@dimen/Text16sp"
             android:textColor="@color/c4"
             />
 
