--- a/app/src/main/res/layout-v28/activity_first_.xml
+++ b/app/src/main/res/layout-v28/activity_first_.xml
@@ -24,8 +24,8 @@
         android:layout_gravity="center"
         android:layout_margin="20dp"
         android:gravity="center"
-        android:padding="20dp"
-        android:textSize="30dp"
+        android:padding="@dimen/View20dp"
+        android:textSize="@dimen/Text24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -64,8 +64,8 @@
             android:visibility="gone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:textSize="25dp"
+            android:layout_marginTop="@dimen/View20dp"
+            android:textSize="@dimen/Text24sp"
             android:textColor="@color/text_black_gray"
             android:text="Dessert"
             />
