--- a/app/src/main/res/layout-v28/activity_like_you.xml
+++ b/app/src/main/res/layout-v28/activity_like_you.xml
@@ -46,7 +46,7 @@
         android:layout_height="match_parent"
         android:text="ยังไม่มีใครเข้าชมโปรไฟล์คุณ"
         android:gravity="center"
-        android:textSize="18dp"
+        android:textSize="@dimen/Text16sp"
         android:textColor="@color/text_gray"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -61,13 +61,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginRight="40dp"
-        android:layout_marginLeft="40dp"
+        android:layout_marginRight="@dimen/View32dp"
+        android:layout_marginLeft="@dimen/View32dp"
         android:background="@drawable/roundlike"
         android:textColor="@color/cpb_white"
         android:translationZ="10dp"
         android:text="@string/See_who_like"
-        android:layout_marginBottom="30dp"/>
+        android:layout_marginBottom="@dimen/View32dp"/>
 
     <ProgressBar
         android:id="@+id/progress_like"
