--- a/app/src/main/res/layout-v28/activity_matches.xml
+++ b/app/src/main/res/layout-v28/activity_matches.xml
@@ -30,15 +30,15 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:padding="10dp"
-                    android:textSize="20dp"
+                    android:padding="@dimen/View8dp"
+                    android:textSize="@dimen/Text20sp"
                     android:textColor="@color/c2"
                     android:text="@string/text_hi"/>
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/recyclerView2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:padding="10dp"
+                    android:padding="@dimen/View8dp"
 
                     />
                 <TextView
@@ -49,8 +49,8 @@
                     android:gravity="center"
                     android:textColor="@color/text_gray"
                     android:text="@string/chatna_empty"
-                    android:textSize="16dp"
-                    android:padding="37dp"
+                    android:textSize="@dimen/Text16sp"
+                    android:padding="@dimen/View36dp"
                     />
             </LinearLayout>
             <LinearLayout
@@ -60,8 +60,8 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:padding="10dp"
-                    android:textSize="20dp"
+                    android:padding="@dimen/View8dp"
+                    android:textSize="@dimen/Text20sp"
                     android:textColor="@color/c2"
                     android:text="@string/yexy_message"/>
                 <androidx.recyclerview.widget.RecyclerView
@@ -80,7 +80,7 @@
                     android:gravity="center"
                     android:text="@string/Chat_empty"
                     android:textColor="@color/text_gray"
-                    android:textSize="16dp"
+                    android:textSize="@dimen/Text16sp"
                     android:paddingTop="80dp"
                     />
 
