--- a/app/src/main/res/layout-v28/activity_phone.xml
+++ b/app/src/main/res/layout-v28/activity_phone.xml
@@ -48,20 +48,20 @@
             android:id="@+id/textView5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="40dp"
-            android:layout_marginRight="40dp"
-            android:layout_marginBottom="40dp"
+            android:layout_marginLeft="@dimen/View32dp"
+            android:layout_marginRight="@dimen/View32dp"
+            android:layout_marginBottom="@dimen/View40dp"
             android:text="@string/phine_no"
 
             android:textColor="@color/text_black_gray"
-            android:textSize="30dp" />
+            android:textSize="@dimen/Text24sp" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
+            android:layout_marginLeft="@dimen/View8dp"
+            android:layout_marginRight="@dimen/View8dp"
             android:gravity="center"
             android:orientation="horizontal">
 
@@ -86,29 +86,29 @@
                 android:inputType="phone"
                 android:maxLength="10"
                 android:textColor="@color/text_black_gray"
-                android:textSize="18dp" />
+                android:textSize="@dimen/Text16sp" />
 
         </LinearLayout>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="30dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginRight="30dp"
+            android:layout_marginStart="@dimen/View32dp"
+            android:layout_marginTop="@dimen/View8dp"
+            android:layout_marginEnd="@dimen/View32dp"
             android:gravity="left"
             android:text="@string/note_phone"
             android:textColor="@color/text_gray"
-            android:textSize="14dp" />
+            android:textSize="@dimen/Text14sp" />
 
         <Button
             android:id="@+id/button10"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="40dp"
-            android:layout_marginBottom="10dp"
+            android:layout_marginTop="@dimen/View40dp"
+            android:layout_marginBottom="@dimen/View8dp"
             android:text="@string/next_button"
-            android:textSize="16dp" />
+            android:textSize="@dimen/Text16sp" />
     </LinearLayout>
 
 
