--- a/app/src/main/res/layout-v28/activity_regis_age.xml
+++ b/app/src/main/res/layout-v28/activity_regis_age.xml
@@ -72,11 +72,11 @@
             android:id="@+id/button_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginBottom="@dimen/View8dp"
+            android:layout_marginTop="@dimen/View20dp"
             android:text="@string/next_button"
             android:textColor="@color/cpb_white"
-            android:textSize="16dp" />
+            android:textSize="@dimen/Text16sp" />
 
     </LinearLayout>
 
