--- a/app/src/main/res/layout-v28/activity_regis_name_.xml
+++ b/app/src/main/res/layout-v28/activity_regis_name_.xml
@@ -51,7 +51,7 @@
             android:id="@+id/textView5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="5dp"
+            android:layout_marginBottom="@dimen/View4dp"
             android:text="@string/name_regis"
             android:textColor="@color/text_black_gray"
             android:textSize="30dp" />
@@ -59,7 +59,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="32dp"
+            android:layout_marginBottom="@dimen/View32dp"
             android:gravity="center"
             android:maxEms="14"
             android:text="@string/name_regis_recommend"
@@ -72,27 +72,27 @@
             android:importantForAutofill="no"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="40dp"
-            android:layout_marginRight="40dp"
+            android:layout_marginLeft="@dimen/View32dp"
+            android:layout_marginRight="@dimen/View32dp"
             android:maxLength="30"
             android:background="@drawable/input_field"
             android:hint="@string/hint_name"
             android:inputType="textPersonName"
-            android:paddingLeft="20dp"
-            android:paddingTop="10dp"
-            android:paddingRight="20dp"
-            android:paddingBottom="10dp"
+            android:paddingLeft="@dimen/View20dp"
+            android:paddingTop="@dimen/View8dp"
+            android:paddingRight="@dimen/View20dp"
+            android:paddingBottom="@dimen/View8dp"
             android:textSize="18dp" />
 
         <Button
             android:id="@+id/button_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginBottom="@dimen/View8dp"
+            android:layout_marginTop="@dimen/View20dp"
             android:text="@string/next_button"
             android:textColor="@color/cpb_white"
-            android:textSize="16dp" />
+            android:textSize="@dimen/Text16sp" />
     </LinearLayout>
 
 
