--- a/app/src/main/res/layout-v28/activity_regis_target__acivity.xml
+++ b/app/src/main/res/layout-v28/activity_regis_target__acivity.xml
@@ -59,9 +59,9 @@
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
-            android:layout_marginLeft="90dp"
-            android:layout_marginRight="90dp"
+            android:layout_marginTop="@dimen/View24dp"
+            android:layout_marginLeft="92dp"
+            android:layout_marginRight="92dp"
             android:elevation="10dp"
             app:cardCornerRadius="10dp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -91,24 +91,24 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="@dimen/View8dp"
             android:gravity="center"
-            android:paddingLeft="20dp"
-            android:paddingRight="20dp"
+            android:paddingLeft="@dimen/View20dp"
+            android:paddingRight="@dimen/View20dp"
             android:text="@string/recommend_profile"
             android:textColor="@color/text_gray"
-            android:textSize="14dp" />
+            android:textSize="@dimen/Text14sp" />
 
         <Button
             android:id="@+id/button6"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="60dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="@dimen/View20dp"
             android:layout_marginRight="60dp"
             android:text="@string/finish"
             android:textColor="@color/cpb_white"
-            android:textSize="16dp"
+            android:textSize="@dimen/Text16sp"
             />
     </LinearLayout>
 
@@ -116,8 +116,8 @@
         android:id="@+id/skip"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginEnd="@dimen/View8dp"
+        android:layout_marginBottom="@dimen/View16dp"
         android:text="ข้าม >"
         android:textColor="#B8B8B8"
         android:textSize="14dp"
