--- a/app/src/main/res/layout-v28/activity_registration.xml
+++ b/app/src/main/res/layout-v28/activity_registration.xml
@@ -24,7 +24,7 @@
         android:id="@+id/Edit_R_password"
         android:layout_width="350dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="@dimen/View16dp"
         android:ems="10"
         android:hint="Password"
         android:inputType="textPassword"
@@ -37,7 +37,7 @@
         android:id="@+id/BRegis"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="@dimen/View24dp"
         android:text="Button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
