--- a/app/src/main/res/layout-v28/activity_setting.xml
+++ b/app/src/main/res/layout-v28/activity_setting.xml
@@ -29,9 +29,9 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:background="@color/background_white"
-                android:paddingTop="10dp"
-                android:paddingRight="10dp"
-                android:paddingLeft="10dp"
+                android:paddingTop="@dimen/View8dp"
+                android:paddingRight="@dimen/View8dp"
+                android:paddingLeft="@dimen/View8dp"
                 >
 
                 <androidx.cardview.widget.CardView
@@ -62,13 +62,13 @@
                         android:gravity="center"
                         android:paddingTop="1dp"
                         android:paddingBottom="1dp"
-                        android:paddingLeft="4dp"
-                        android:paddingRight="4dp"
+                        android:paddingLeft="@dimen/View4dp"
+                        android:paddingRight="@dimen/View4dp"
                         android:layout_gravity="bottom|left"
                         android:background="@drawable/tag_image"
                         android:text="@string/tag_profile"
                         android:textColor="@color/cpb_white"
-                        android:textSize="12dp"
+                        android:textSize="@dimen/Text14sp"
                         />
 
 
@@ -130,9 +130,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:paddingLeft="10dp"
-                android:paddingBottom="10dp"
-                android:paddingRight="10dp"
+                android:paddingLeft="@dimen/View8dp"
+                android:paddingBottom="@dimen/View8dp"
+                android:paddingRight="@dimen/View8dp"
                 android:background="@color/background_white"
                 >
 
@@ -217,10 +217,10 @@
                     android:gravity="center_vertical"
                     android:orientation="vertical"
 
-                    android:paddingLeft="20dp"
-                    android:paddingTop="10dp"
-                    android:paddingBottom="10dp"
-                    android:paddingRight="10dp"
+                    android:paddingLeft="@dimen/View20dp"
+                    android:paddingTop="@dimen/View8dp"
+                    android:paddingBottom="@dimen/View8dp"
+                    android:paddingRight="@dimen/View8dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/linearLayout3">
@@ -253,10 +253,10 @@
                         android:hint="@string/Introduce_yourself"
                         android:inputType="textMultiLine"
                         android:minHeight="100dp"
-                        android:paddingLeft="20dp"
-                        android:paddingTop="10dp"
-                        android:paddingRight="10dp"
-                        android:paddingBottom="10dp"
+                        android:paddingLeft="@dimen/View20dp"
+                        android:paddingTop="@dimen/View8dp"
+                        android:paddingRight="@dimen/View8dp"
+                        android:paddingBottom="@dimen/View8dp"
                         android:textColor="#A3A3A3"
                         android:textColorHint="@color/c1"
                         android:maxLength="200"
@@ -269,10 +269,10 @@
                     android:layout_height="40dp"
                     android:gravity="center_vertical"
                     android:orientation="vertical"
-                    android:paddingLeft="20dp"
-                    android:paddingTop="10dp"
-                    android:paddingBottom="10dp"
-                    android:paddingRight="10dp"
+                    android:paddingLeft="@dimen/View20dp"
+                    android:paddingTop="@dimen/View8dp"
+                    android:paddingBottom="@dimen/View8dp"
+                    android:paddingRight="@dimen/View8dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.5"
                     app:layout_constraintStart_toStartOf="parent"
@@ -301,12 +301,12 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:paddingLeft="20dp"
-                        android:paddingTop="10dp"
-                        android:paddingBottom="10dp"
-                        android:paddingRight="10dp"
+                        android:paddingLeft="@dimen/View20dp"
+                        android:paddingTop="@dimen/View8dp"
+                        android:paddingBottom="@dimen/View8dp"
+                        android:paddingRight="@dimen/View8dp"
                         android:text="@string/work"
-                        android:textSize="16dp"
+                        android:textSize="@dimen/Text16sp"
                         android:textColor="@color/text_black_gray" />
 
                     <com.jabirdeveloper.tinderswipe.CustomEdittext
@@ -317,10 +317,10 @@
                         android:ems="10"
                         android:hint="@string/add"
                         android:inputType="textMultiLine"
-                        android:paddingLeft="20dp"
-                        android:textSize="16dp"
-                        android:paddingBottom="10dp"
-                        android:paddingRight="10dp"
+                        android:paddingLeft="@dimen/View20dp"
+                        android:textSize="@dimen/Text16sp"
+                        android:paddingBottom="@dimen/View8dp"
+                        android:paddingRight="@dimen/View8dp"
                         android:textColorHint="@color/c3"
                         android:maxLength="100"
                         android:textColor="@color/text_gray" />
@@ -342,11 +342,11 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:paddingLeft="20dp"
-                        android:paddingTop="10dp"
-                        android:paddingBottom="10dp"
-                        android:paddingRight="10dp"
-                        android:textSize="16dp"
+                        android:paddingLeft="@dimen/View20dp"
+                        android:paddingTop="@dimen/View8dp"
+                        android:paddingBottom="@dimen/View8dp"
+                        android:paddingRight="@dimen/View8dp"
+                        android:textSize="@dimen/Text16sp"
                         android:text="@string/school"
                         android:textColor="@color/text_black_gray" />
 
@@ -357,12 +357,12 @@
                         android:background="@color/background_white"
                         android:ems="10"
                         android:hint="@string/add"
-                        android:textSize="16dp"
+                        android:textSize="@dimen/Text16sp"
                         android:inputType="textMultiLine"
-                        android:paddingLeft="20dp"
+                        android:paddingLeft="@dimen/View20dp"
                         android:textColorHint="@color/c3"
-                        android:paddingBottom="10dp"
-                        android:paddingRight="10dp"
+                        android:paddingBottom="@dimen/View8dp"
+                        android:paddingRight="@dimen/View8dp"
                         android:maxLength="100"
                         android:textColor="@color/text_gray" />
 
@@ -374,10 +374,10 @@
                     android:layout_height="40dp"
                     android:gravity="center_vertical"
                     android:orientation="vertical"
-                    android:paddingLeft="20dp"
-                    android:paddingTop="10dp"
-                    android:paddingBottom="10dp"
-                    android:paddingRight="10dp"
+                    android:paddingLeft="@dimen/View20dp"
+                    android:paddingTop="@dimen/View8dp"
+                    android:paddingBottom="@dimen/View8dp"
+                    android:paddingRight="@dimen/View8dp"
                     app:layout_constraintTop_toBottomOf="@+id/linearLayout8">
 
                     <TextView
@@ -402,12 +402,12 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:paddingLeft="20dp"
-                        android:paddingTop="10dp"
-                        android:paddingBottom="10dp"
-                        android:paddingRight="10dp"
+                        android:paddingLeft="@dimen/View20dp"
+                        android:paddingTop="@dimen/View8dp"
+                        android:paddingBottom="@dimen/View8dp"
+                        android:paddingRight="@dimen/View8dp"
                         android:text="@string/name"
-                        android:textSize="16dp"
+                        android:textSize="@dimen/Text16sp"
                         android:textColor="@color/text_black_gray" />
 
                     <com.jabirdeveloper.tinderswipe.CustomEdittext
@@ -417,11 +417,11 @@
                         android:background="@color/background_white"
                         android:ems="10"
                         android:hint="@string/add"
-                        android:textSize="16dp"
+                        android:textSize="@dimen/Text16sp"
                         android:inputType="textMultiLine"
-                        android:paddingLeft="20dp"
-                        android:paddingBottom="10dp"
-                        android:paddingRight="10dp"
+                        android:paddingLeft="@dimen/View20dp"
+                        android:paddingBottom="@dimen/View8dp"
+                        android:paddingRight="@dimen/View8dp"
                         android:maxLength="30"
                         android:textColorHint="@color/c4"
                         android:textColor="@color/text_gray" />
@@ -443,11 +443,11 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:paddingLeft="20dp"
-                        android:paddingTop="10dp"
-                        android:paddingBottom="10dp"
-                        android:paddingRight="10dp"
-                        android:textSize="16dp"
+                        android:paddingLeft="@dimen/View20dp"
+                        android:paddingTop="@dimen/View8dp"
+                        android:paddingBottom="@dimen/View8dp"
+                        android:paddingRight="@dimen/View8dp"
+                        android:textSize="@dimen/Text16sp"
                         android:text="@string/language_profile"
                         android:textColor="@color/text_black_gray" />
 
@@ -457,8 +457,8 @@
                         android:layout_height="wrap_content"
                         android:hint="@string/add"
                         android:paddingStart="20dp"
-                        android:textSize="16dp"
-                        android:paddingBottom="10dp"
+                        android:textSize="@dimen/Text16sp"
+                        android:paddingBottom="@dimen/View8dp"
                         android:paddingEnd="10dp"
                         android:gravity="left"
                         android:textColor="@color/text_gray"
@@ -482,12 +482,12 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:paddingLeft="20dp"
-                        android:paddingTop="10dp"
-                        android:paddingBottom="10dp"
-                        android:paddingRight="10dp"
+                        android:paddingLeft="@dimen/View20dp"
+                        android:paddingTop="@dimen/View8dp"
+                        android:paddingBottom="@dimen/View8dp"
+                        android:paddingRight="@dimen/View8dp"
                         android:text="@string/religion"
-                        android:textSize="16dp"
+                        android:textSize="@dimen/Text16sp"
                         android:textColor="@color/text_black_gray" />
 
                     <TextView
@@ -495,10 +495,10 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="@string/add"
-                        android:textSize="16dp"
-                        android:paddingLeft="20dp"
-                        android:paddingBottom="10dp"
-                        android:paddingRight="10dp"
+                        android:textSize="@dimen/Text16sp"
+                        android:paddingLeft="@dimen/View20dp"
+                        android:paddingBottom="@dimen/View8dp"
+                        android:paddingRight="@dimen/View8dp"
                         android:textColor="@color/text_gray"
                         android:textColorHint="@color/c4"
                          />
@@ -511,10 +511,10 @@
                     android:layout_height="40dp"
                     android:gravity="center_vertical"
                     android:orientation="vertical"
-                    android:paddingLeft="20dp"
-                    android:paddingTop="10dp"
-                    android:paddingBottom="10dp"
-                    android:paddingRight="10dp"
+                    android:paddingLeft="@dimen/View20dp"
+                    android:paddingTop="@dimen/View8dp"
+                    android:paddingBottom="@dimen/View8dp"
+                    android:paddingRight="@dimen/View8dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.5"
                     app:layout_constraintStart_toStartOf="parent"
@@ -547,11 +547,11 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:paddingLeft="20dp"
-                        android:paddingTop="10dp"
-                        android:paddingBottom="10dp"
-                        android:paddingRight="10dp"
-                        android:textSize="16dp"
+                        android:paddingStart="@dimen/View20dp"
+                        android:paddingTop="@dimen/View8dp"
+                        android:paddingBottom="@dimen/View8dp"
+                        android:paddingEnd="@dimen/View8dp"
+                        android:textSize="@dimen/Text16sp"
                         android:text="@string/Interests"
                         android:textColor="@color/text_black_gray" />
 
@@ -559,11 +559,10 @@
                         android:id="@+id/Grid"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_alignParentBottom="true"
-                        android:paddingLeft="20dp"
-                        android:paddingBottom="50dp"
-                        android:paddingRight="10dp"
-                        android:textSize="16dp"
+                        android:paddingStart="@dimen/View20dp"
+                        android:paddingBottom="48dp"
+                        android:paddingEnd="@dimen/View8dp"
+                        android:textSize="@dimen/Text16sp"
                         app:alignContent="flex_start"
                         app:alignItems="flex_start"
                         app:flexWrap="wrap" />
