--- a/app/src/main/res/layout/activity_band_user.xml
+++ b/app/src/main/res/layout/activity_band_user.xml
@@ -11,31 +11,31 @@
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:src="@drawable/ic_banduser"
-        android:layout_marginBottom="20dp"
+        android:layout_marginBottom="@dimen/View20dp"
         />
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginRight="40dp"
-        android:layout_marginLeft="40dp"
+        android:layout_marginRight="@dimen/View32dp"
+        android:layout_marginLeft="@dimen/View32dp"
         android:text="บีญชีของคุณถูกระงับการใช้งาน"
         android:gravity="center"
         android:textColor="@color/red"
-        android:textSize="20dp"
+        android:textSize="@dimen/Text20sp"
         />
     <Button
         android:id="@+id/button_back"
         android:layout_width="wrap_content"
         android:layout_height="40dp"
-        android:layout_marginBottom="10dp"
+        android:layout_marginBottom="@dimen/View8dp"
         android:layout_marginTop="40dp"
         android:backgroundTint="@color/red"
         android:background="@drawable/roundlike"
-        android:paddingLeft="20dp"
-        android:paddingRight="20dp"
+        android:paddingLeft="@dimen/View20dp"
+        android:paddingRight="@dimen/View20dp"
         android:text="@string/back"
         android:textColor="@color/cpb_white"
-        android:textSize="16dp" />
+        android:textSize="@dimen/Text16sp" />
 
 
 </LinearLayout>
