--- a/app/src/main/res/layout/activity_question.xml
+++ b/app/src/main/res/layout/activity_question.xml
@@ -27,10 +27,10 @@
         android:layout_gravity="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="30sp"
+        android:textSize="@dimen/Text24sp"
         android:text="@string/questionActivityTitle"/>
     <TextView
-        android:layout_marginBottom="10dp"
+        android:layout_marginBottom="@dimen/View8dp"
         android:layout_gravity="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
