--- a/app/src/main/res/layout/activity_setting_main.xml
+++ b/app/src/main/res/layout/activity_setting_main.xml
@@ -30,7 +30,7 @@
                     android:layout_height="wrap_content"
                     android:layout_centerHorizontal="true"
                     android:layout_centerVertical="true"
-                    android:layout_marginTop="20dp">
+                    android:layout_marginTop="@dimen/View20dp">
 
                     <de.hdodenhof.circleimageview.CircleImageView
                         android:id="@+id/pre_Image_porfile"
@@ -66,7 +66,7 @@
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
+                    android:layout_marginTop="@dimen/View20dp"
                     android:orientation="horizontal">
 
                     <ImageView
@@ -74,7 +74,7 @@
                         android:layout_width="24dp"
                         android:layout_height="24dp"
                         android:layout_gravity="center"
-                        android:layout_marginRight="10dp"
+                        android:layout_marginRight="@dimen/View8dp"
                         android:textColor="@color/c2"
                         android:visibility="gone" />
 
@@ -110,7 +110,7 @@
                         android:id="@+id/aa"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="10dp"
+                        android:layout_marginTop="@dimen/View8dp"
                         android:text="@string/touch"
                         android:textColor="@color/text_gray"
                         android:textSize="@dimen/Text16sp" />
@@ -120,14 +120,14 @@
                     android:id="@+id/vip"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="30dp"
-                    android:layout_marginTop="20dp"
-                    android:layout_marginRight="30dp"
-                    android:layout_marginBottom="14dp"
+                    android:layout_marginLeft="@dimen/View32dp"
+                    android:layout_marginTop="@dimen/View20dp"
+                    android:layout_marginRight="@dimen/View36dp"
+                    android:layout_marginBottom="@dimen/View12dp"
                     android:background="@drawable/roundlike"
                     android:clickable="true"
                     android:gravity="center"
-                    android:padding="10dp"
+                    android:padding="@dimen/View8dp"
                     android:text="@string/vip"
                     android:textColor="@color/cpb_white"
                     android:textSize="@dimen/Text16sp"
@@ -138,16 +138,16 @@
                     android:id="@+id/admob_setting"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="30dp"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginRight="30dp"
+                    android:layout_marginLeft="@dimen/View32dp"
+                    android:layout_marginTop="@dimen/View8dp"
+                    android:layout_marginRight="@dimen/View32dp"
                     android:background="@drawable/roundlike2"
                     android:clickable="true"
                     android:gravity="center"
-                    android:padding="10dp"
+                    android:padding="@dimen/View8dp"
                     android:text="ดูโฆษณาเพื่อรับจำนวน กดถูกใจ/ทักทาย เพิ่ม"
                     android:textColor="@color/text_gray"
-                    android:textSize="14dp"
+                    android:textSize="@dimen/Text14sp"
                     android:visibility="gone" />
 
 
@@ -173,9 +173,7 @@
                         android:foreground="?android:selectableItemBackground"
                         android:orientation="horizontal"
                         android:paddingStart="20dp"
-                        android:paddingTop="10dp"
-                        android:paddingEnd="10dp"
-                        android:paddingBottom="10dp">
+                        android:paddingEnd="10dp">
 
                         <ImageView
                             android:layout_width="match_parent"
@@ -189,7 +187,7 @@
                             android:layout_weight="1"
                             android:gravity="center_vertical"
                             android:orientation="horizontal"
-                            android:paddingLeft="4dp">
+                            android:paddingStart="@dimen/View4dp">
 
                             <TextView
                                 android:layout_width="wrap_content"
@@ -202,7 +200,7 @@
                                 android:id="@+id/count_like"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_marginLeft="10dp"
+                                android:layout_marginLeft="@dimen/View8dp"
                                 android:text="0"
                                 android:textColor="@color/c1"
                                 android:textSize="@dimen/Text16sp" />
@@ -220,7 +218,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
                     android:layout_marginLeft="20dp"
-                    android:layout_marginRight="20dp"
+                    android:layout_marginRight="@dimen/View20dp"
                     android:background="@color/background_gray" />
 
                 <LinearLayout
@@ -237,9 +235,8 @@
                         android:foreground="?android:selectableItemBackground"
                         android:orientation="horizontal"
                         android:paddingStart="20dp"
-                        android:paddingTop="10dp"
-                        android:paddingEnd="10dp"
-                        android:paddingBottom="10dp">
+
+                        android:paddingEnd="10dp">
 
                         <ImageView
                             android:layout_width="match_parent"
@@ -254,7 +251,7 @@
                             android:layout_weight="1"
                             android:gravity="center_vertical"
                             android:orientation="horizontal"
-                            android:paddingLeft="4dp">
+                            android:paddingStart="@dimen/View4dp">
 
                             <TextView
                                 android:layout_width="wrap_content"
@@ -267,7 +264,7 @@
                                 android:id="@+id/see_porfile"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_marginLeft="10dp"
+                                android:layout_marginLeft="@dimen/View8dp"
                                 android:text="0"
                                 android:textColor="@color/c4"
                                 android:textSize="@dimen/Text16sp" />
@@ -288,7 +285,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp"
+                android:layout_marginRight="@dimen/View20dp"
                 android:background="@color/background_gray" />
 
             <LinearLayout
@@ -305,10 +302,9 @@
                     android:background="@color/background_white"
                     android:foreground="?android:selectableItemBackground"
                     android:orientation="horizontal"
-                    android:paddingLeft="20dp"
-                    android:paddingTop="10dp"
-                    android:paddingRight="10dp"
-                    android:paddingBottom="10dp">
+                    android:paddingStart="20dp"
+
+                    android:paddingEnd="10dp">
 
                     <ImageView
                         android:layout_width="match_parent"
@@ -340,7 +336,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp"
+                android:layout_marginRight="@dimen/View20dp"
                 android:background="@color/background_gray" />
 
             <LinearLayout
@@ -357,10 +353,8 @@
                     android:background="@color/background_white"
                     android:foreground="?android:selectableItemBackground"
                     android:orientation="horizontal"
-                    android:paddingLeft="20dp"
-                    android:paddingTop="10dp"
-                    android:paddingRight="10dp"
-                    android:paddingBottom="10dp">
+                    android:paddingStart="20dp"
+                    android:paddingEnd="10dp">
 
                     <ImageView
                         android:layout_width="match_parent"
@@ -377,7 +371,6 @@
                         android:paddingStart="4dp"
                         android:text="@string/Edit"
                         android:textColor="@color/defaultContentColor"
-
                         android:textSize="@dimen/Text16sp" />
 
                     <ImageView
@@ -392,7 +385,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp"
+                android:layout_marginRight="@dimen/View20dp"
                 android:background="@color/background_gray" />
 
             <LinearLayout
@@ -402,16 +395,14 @@
                 android:background="@color/background_white"
                 android:foreground="?android:selectableItemBackground"
                 android:orientation="horizontal"
-                android:paddingLeft="20dp"
-                android:paddingTop="10dp"
-                android:paddingRight="10dp"
-                android:paddingBottom="10dp">
+                android:paddingStart="20dp"
+
+                android:paddingEnd="10dp">
 
                 <ImageView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="6"
-
                     android:src="@drawable/ic_baseline_feedback_24" />
 
                 <TextView
