--- a/app/src/main/res/layout/alert_dialog.xml
+++ b/app/src/main/res/layout/alert_dialog.xml
@@ -22,7 +22,7 @@
         android:background="@drawable/alert_toolbar">
         <TextView
             android:id="@+id/title_alert"
-            android:textSize="20dp"
+            android:textSize="@dimen/Text20sp"
             android:textColor="#FFFFFF"
             android:textStyle="bold"
             android:layout_gravity="center"
@@ -37,18 +37,18 @@
         android:orientation="vertical">
         <ImageView
             android:id="@+id/icon_alert"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="@dimen/View8dp"
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:background="@mipmap/ic_launcher"/>
         <TextView
-            android:padding="10dp"
+            android:padding="@dimen/View8dp"
             android:layout_gravity="center"
             android:id="@+id/message_alert"
             android:textStyle="bold"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="15dp"
+            android:textSize="@dimen/Text16sp"
             android:text="Message"/>
     </LinearLayout>
 
@@ -56,7 +56,7 @@
         android:id="@+id/linear_alert"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="15dp"
+        android:layout_marginBottom="@dimen/View16dp"
         android:gravity="end">
         <TextView
             android:id="@+id/yes_alert"
@@ -68,8 +68,8 @@
             />
         <TextView
             android:id="@+id/dis_alert"
-            android:layout_marginEnd="5dp"
-            android:layout_marginStart="5dp"
+            android:layout_marginEnd="@dimen/View4dp"
+            android:layout_marginStart="@dimen/View4dp"
             android:layout_width="80dp"
             android:layout_height="40dp"
             android:text="ตกลง"
