--- a/app/src/main/res/layout/dfg.xml
+++ b/app/src/main/res/layout/dfg.xml
@@ -4,14 +4,14 @@
     android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:padding="20dp"
+    android:padding="@dimen/View20dp"
     android:background="@color/float_transparent"
     android:layout_height="match_parent">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="@dimen/View32dp"
         android:gravity="center"
         app:cardCornerRadius="10dp"
         android:background="@color/cpb_white"
@@ -22,17 +22,17 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:padding="20dp"
+        android:padding="@dimen/View20dp"
         android:background="@color/cpb_white"
         android:orientation="vertical">
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="@dimen/View8dp"
             android:gravity="center"
             android:text="กายหน้าหี"
-            android:textSize="20dp"
+            android:textSize="@dimen/Text20sp"
             />
         <TextView
             android:layout_width="match_parent"
