--- a/app/src/main/res/layout/hi_item.xml
+++ b/app/src/main/res/layout/hi_item.xml
@@ -3,11 +3,11 @@
     <com.google.android.material.card.MaterialCardView
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_marginEnd="5dp"
+        android:layout_marginEnd="@dimen/View4dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:cardElevation="2dp"
-        app:cardCornerRadius="7dp">
+        app:cardCornerRadius="8dp">
 
 
         <ImageView
@@ -21,9 +21,9 @@
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
             android:gravity="center_horizontal"
-            android:layout_marginLeft="4dp"
-            android:layout_marginRight="4dp"
-            android:layout_marginBottom="4dp"
+            android:layout_marginLeft="@dimen/View4dp"
+            android:layout_marginRight="@dimen/View4dp"
+            android:layout_marginBottom="@dimen/View4dp"
             android:includeFontPadding="false"
             android:ellipsize="end"
             android:maxLines="1"
