--- a/app/src/main/res/layout/item_chat.xml
+++ b/app/src/main/res/layout/item_chat.xml
@@ -1,126 +1,128 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal"
-    android:padding="10dp">
+    android:padding="@dimen/View8dp">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
         <de.hdodenhof.circleimageview.CircleImageView
-            android:visibility="gone"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
             android:id="@+id/image_holder"
-            android:layout_marginEnd="3dp"/>
+            android:layout_width="@dimen/View40dp"
+            android:layout_height="@dimen/View40dp"
+            android:layout_marginEnd="@dimen/View4dp"
+            android:visibility="gone" />
+
         <RelativeLayout
-            android:layout_gravity="center"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_gravity="center">
+
             <LinearLayout
                 android:id="@+id/container"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:gravity="start">
+                android:gravity="start"
+                android:orientation="horizontal">
 
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
                     <RelativeLayout
-                        android:visibility="gone"
-                        android:layout_marginStart="1dp"
-                        android:layout_marginEnd="1dp"
                         android:id="@+id/lilili"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        >
+                        android:layout_marginStart="1dp"
+                        android:layout_marginEnd="1dp"
+                        android:visibility="gone">
 
                         <TextView
-                            android:paddingStart="6dp"
-                            android:paddingEnd="6dp"
                             android:id="@+id/time_chat_user"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:paddingBottom="3dp"
+                            android:paddingStart="@dimen/View8dp"
+                            android:paddingEnd="@dimen/View8dp"
+                            android:paddingBottom="@dimen/View4dp"
                             android:textSize="@dimen/Text10sp" />
                     </RelativeLayout>
+
                     <RelativeLayout
-                        android:visibility="gone"
-                        android:paddingTop="6dp"
-                        android:paddingBottom="6dp"
                         android:id="@+id/lili"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content">
+                        android:layout_height="wrap_content"
+                        android:paddingTop="@dimen/View8dp"
+                        android:paddingBottom="@dimen/View8dp"
+                        android:visibility="gone">
+
                         <LinearLayout
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content">
 
-                        <Button
-                            android:visibility="gone"
-                            android:layout_gravity="center"
-                            android:layout_marginStart="10dp"
-                            android:id="@+id/play_audio"
-                            android:layout_width="25dp"
-                            android:layout_height="25dp"
-                            android:background="@drawable/ic_play_circle_outline_black_24dp"
-                            />
-                        <ProgressBar
-                            android:layout_marginStart="10dp"
-                            android:visibility="gone"
-                            android:id="@+id/progressBar_playAudio"
-                            android:layout_below="@+id/Linear_top_chat"
-                            android:layout_centerHorizontal="true"
-                            style="?android:attr/progressBarStyle"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            />
+                            <Button
+                                android:id="@+id/play_audio"
+                                android:layout_width="@dimen/View24dp"
+                                android:layout_height="@dimen/View24dp"
+                                android:layout_gravity="center"
+                                android:layout_marginStart="@dimen/View8dp"
+                                android:background="@drawable/ic_play_circle_outline_black_24dp"
+                                android:visibility="gone" />
+
+                            <ProgressBar
+                                android:id="@+id/progressBar_playAudio"
+                                style="?android:attr/progressBarStyle"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center"
+                                android:layout_marginStart="@dimen/View8dp"
+                                android:visibility="gone" />
 
 
-                        <TextView
-                            android:visibility="gone"
-                            android:padding="8dp"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:id="@+id/begin_audio"/>
+                            <TextView
+                                android:id="@+id/begin_audio"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:padding="@dimen/View8dp"
+                                android:visibility="gone" />
 
-                        <com.ldoublem.loadingviewlib.LVCircularCD
-                            android:visibility="gone"
-                            android:id="@+id/play_pause_animate"
-                            android:layout_gravity="center"
-                            android:layout_width="35dp"
-                            android:layout_height="35dp"/>
+                            <com.ldoublem.loadingviewlib.LVCircularCD
+                                android:id="@+id/play_pause_animate"
+                                android:layout_width="@dimen/View36dp"
+                                android:layout_height="@dimen/View36dp"
+                                android:layout_gravity="center"
+                                android:visibility="gone" />
 
-                        <TextView
-                            android:layout_gravity="center"
-                            android:paddingStart="8dp"
-                            android:paddingEnd="8dp"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:id="@+id/chatmessage"/>
+                            <TextView
+                                android:id="@+id/chatmessage"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center"
+                                android:paddingStart="@dimen/View8dp"
+                                android:paddingEnd="@dimen/View8dp" />
                         </LinearLayout>
 
                     </RelativeLayout>
 
                     <RelativeLayout
-                        android:visibility="gone"
                         android:id="@+id/li"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:orientation="vertical"
                         android:background="@color/float_transparent"
-                        android:padding="2dp">
+                        android:orientation="vertical"
+                        android:padding="2dp"
+                        android:visibility="gone">
 
                         <androidx.cardview.widget.CardView
                             android:id="@+id/card"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-
                             android:background="@color/float_transparent"
                             app:cardCornerRadius="10dp">
+
                             <androidx.constraintlayout.widget.ConstraintLayout
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
@@ -129,10 +131,10 @@
                                 <ImageView
                                     android:id="@+id/img_sent"
                                     android:layout_width="wrap_content"
-                                    android:layout_height="210dp"
+                                    android:layout_height="212dp"
 
-                                    android:background="@color/float_transparent"
                                     android:adjustViewBounds="true"
+                                    android:background="@color/float_transparent"
                                     app:layout_constraintBottom_toBottomOf="parent"
                                     app:layout_constraintEnd_toEndOf="parent"
                                     app:layout_constraintStart_toStartOf="parent"
@@ -144,36 +146,37 @@
 
                     </RelativeLayout>
                 </RelativeLayout>
+
                 <TextView
-                    android:visibility="gone"
                     android:id="@+id/match_id"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content"
+                    android:visibility="gone" />
 
                 <TextView
-                    android:visibility="gone"
                     android:id="@+id/chk_image"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content"
+                    android:visibility="gone" />
 
                 <TextView
-                    android:visibility="gone"
                     android:id="@+id/chk_image_2"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content"
+                    android:visibility="gone" />
 
                 <TextView
-                    android:visibility="gone"
                     android:id="@+id/audio_url"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content"
+                    android:visibility="gone" />
 
 
                 <TextView
-                    android:visibility="gone"
                     android:id="@+id/match_id_real_image"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content"
+                    android:visibility="gone" />
 
             </LinearLayout>
         </RelativeLayout>
