--- a/app/src/main/res/layout/item_likeyou.xml
+++ b/app/src/main/res/layout/item_likeyou.xml
@@ -11,17 +11,17 @@
         android:id="@+id/dd_22"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="4dp">
+        android:padding="@dimen/View4dp">
 
         <RelativeLayout
-            android:layout_width="75dp"
-            android:layout_height="75dp"
+            android:layout_width="76dp"
+            android:layout_height="76dp"
             android:layout_gravity="center_vertical">
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/Match_Image"
-                android:layout_width="65dp"
-                android:layout_height="65dp"
+                android:layout_width="64dp"
+                android:layout_height="64dp"
                 android:layout_centerInParent="true"
                 app:civ_border_color="#11000000"
                 app:civ_border_width="2dp" />
@@ -31,8 +31,8 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentBottom="true"
-                android:paddingEnd="8dp"
-                android:paddingBottom="10dp">
+                android:paddingEnd="@dimen/View8dp"
+                android:paddingBottom="@dimen/View8dp">
 
                 <ImageView
                     android:id="@+id/on_off_matches"
@@ -46,8 +46,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="top"
-            android:layout_marginStart="4dp"
-            android:layout_marginEnd="10dp"
+            android:layout_marginStart="@dimen/View4dp"
+            android:layout_marginEnd="@dimen/View8dp"
             android:orientation="vertical"
             android:padding="2dp">
 
@@ -78,9 +78,9 @@
                         android:id="@+id/tagkm"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="4dp"
-                        android:paddingLeft="4dp"
-                        android:paddingRight="4dp"
+                        android:layout_marginStart="@dimen/View4dp"
+                        android:paddingLeft="@dimen/View4dp"
+                        android:paddingRight="@dimen/View4dp"
                         android:textAlignment="center"
                         android:textColor="@color/c3"
                         android:textSize="@dimen/Text16sp"
@@ -105,7 +105,7 @@
                 android:id="@+id/status_time"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="4dp"
+                android:layout_marginBottom="@dimen/View4dp"
                 android:textColor="@color/text_black_gray"
                 android:textSize="@dimen/Text14sp" />
 
