--- a/app/src/main/res/layout/item_matches.xml
+++ b/app/src/main/res/layout/item_matches.xml
@@ -13,11 +13,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/background_white"
-        android:padding="4dp">
+        android:padding="@dimen/View4dp">
 
         <RelativeLayout
-            android:layout_width="75dp"
-            android:layout_height="75dp"
+            android:layout_width="76dp"
+            android:layout_height="76dp"
             android:layout_gravity="center_vertical">
             <ProgressBar
                 android:id="@+id/progress_image"
@@ -28,8 +28,8 @@
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/Match_Image"
-                android:layout_width="65dp"
-                android:layout_height="65dp"
+                android:layout_width="64dp"
+                android:layout_height="64dp"
                 android:layout_centerInParent="true"
                 app:civ_border_color="#11000000"
                 android:transitionName="ProfileTransition"
@@ -42,13 +42,13 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentBottom="true"
-                android:paddingEnd="8dp"
-                android:paddingBottom="10dp">
+                android:paddingEnd="@dimen/View8dp"
+                android:paddingBottom="@dimen/View8dp">
 
                 <ImageView
                     android:id="@+id/on_off_matches"
-                    android:layout_width="12dp"
-                    android:layout_height="12dp"
+                    android:layout_width="@dimen/View12dp"
+                    android:layout_height="@dimen/View12dp"
                     android:background="@drawable/offline_user" />
             </LinearLayout>
         </RelativeLayout>
@@ -57,10 +57,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="top"
-            android:layout_marginStart="4dp"
-            android:layout_marginEnd="8dp"
+            android:layout_marginStart="@dimen/View4dp"
+            android:layout_marginEnd="@dimen/View8dp"
             android:orientation="vertical"
-            android:padding="4dp">
+            android:padding="@dimen/View4dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -90,9 +90,9 @@
                         android:id="@+id/tagkm"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="4dp"
-                        android:paddingLeft="4dp"
-                        android:paddingRight="4dp"
+                        android:layout_marginStart="@dimen/View4dp"
+                        android:paddingLeft="@dimen/View4dp"
+                        android:paddingRight="@dimen/View4dp"
                         android:textAlignment="center"
                         android:textColor="@color/c3"
                         android:textSize="@dimen/Text16sp"
@@ -111,12 +111,12 @@
 
                 <TextView
                     android:id="@+id/chat_unread"
+                    android:text="0"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="@drawable/background_unread"
-                    android:paddingStart="10dp"
-                    android:paddingEnd="10dp"
-                    android:text="0"
+                    android:paddingStart="@dimen/View8dp"
+                    android:paddingEnd="@dimen/View8dp"
                     android:textAlignment="viewEnd"
                     android:textColor="#FFFFFF"
                     android:textSize="@dimen/Text14sp"
@@ -133,19 +133,17 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="0.7"
-                    android:hint="ข้อความล่าสุด"
                     android:textSize="@dimen/Text14sp"
                     android:visibility="gone" />
 
                 <TextView
                     android:id="@+id/Latest_time"
-                    android:layout_width="50dp"
+                    android:layout_width="70dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="0.1"
-                    android:hint="เวลา"
                     android:textAlignment="viewEnd"
                     android:textSize="@dimen/Text14sp"
-                    android:visibility="gone"
+
                      />
             </LinearLayout>
 
@@ -153,7 +151,7 @@
                 android:id="@+id/id"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="5dp"
+                android:layout_marginStart="@dimen/View4dp"
                 android:textSize="@dimen/Text10sp"
                 android:visibility="gone" />
 
