--- a/app/src/main/res/layout/money.xml
+++ b/app/src/main/res/layout/money.xml
@@ -6,7 +6,7 @@
     android:background="@drawable/corner15"
     android:gravity="center"
     android:orientation="vertical"
-    android:padding="20dp">
+    android:padding="@dimen/View20dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -17,14 +17,14 @@
 
         <ImageView
             android:id="@+id/image_vip"
-            android:layout_width="100dp"
-            android:layout_height="100dp" />
+            android:layout_width="98dp"
+            android:layout_height="98dp" />
 
         <TextView
             android:id="@+id/text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="@dimen/View20dp"
             android:textColor="@color/text_black_gray"
             android:textSize="@dimen/Text20sp" />
 
@@ -42,8 +42,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="10dp"
+        android:layout_marginTop="@dimen/View20dp"
+        android:layout_marginBottom="@dimen/View8dp"
         android:text="฿50.00 / เดือน"
         android:textColor="@color/cpb_white"
 
