--- a/app/src/main/res/layout/progress_dialog.xml
+++ b/app/src/main/res/layout/progress_dialog.xml
@@ -3,6 +3,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingTop="@dimen/View32dp"
+    android:paddingBottom="@dimen/View32dp"
     android:background="@drawable/corner15"
     android:gravity="center"
     android:orientation="vertical">
@@ -14,7 +16,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="@dimen/View8dp"
         android:text="@string/loading"
         android:textColor="@color/text_black_gray"
         android:textSize="@dimen/Text16sp" />
