--- a/app/src/main/res/layout/question_dialog.xml
+++ b/app/src/main/res/layout/question_dialog.xml
@@ -11,12 +11,12 @@
                 android:orientation="vertical"
                 android:layout_height="wrap_content">
                 <TextView
-                    android:layout_marginStart="5dp"
-                    android:padding="5dp"
+                    android:layout_marginStart="@dimen/View4dp"
+                    android:padding="@dimen/View4dp"
                     android:id="@+id/message_QA"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textSize="17dp"
+                    android:textSize="@dimen/Text16sp"
                     android:textColor="#000000"
                     android:text="Message"/>
                 <RadioGroup
@@ -35,12 +35,12 @@
                         android:text="Answer2"/>
                 </RadioGroup>
                 <TextView
-                    android:layout_marginStart="5dp"
-                    android:padding="5dp"
+                    android:layout_marginStart="@dimen/View4dp"
+                    android:padding="@dimen/View4dp"
                     android:id="@+id/message_QAweight"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textSize="17dp"
+                    android:textSize="@dimen/Text16sp"
                     android:textColor="#000000"
                     android:text="@string/QA_improtant"/>
                 <RadioGroup
@@ -74,7 +74,7 @@
                         android:text="@string/QA_choice5"/>
                 </RadioGroup>
         <LinearLayout
-            android:padding="3dp"
+            android:padding="@dimen/View4dp"
             android:gravity="end"
             android:layout_width="match_parent"
             android:orientation="horizontal"
@@ -83,7 +83,7 @@
                 android:textStyle="bold"
                 android:textColor="@color/c3"
                 android:id="@+id/QA_dismiss"
-                android:padding="10dp"
+                android:padding="@dimen/View8dp"
                 android:text="@string/dismiss_label"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
@@ -91,7 +91,7 @@
                 android:textStyle="bold"
                 android:textColor="@color/c3"
                 android:id="@+id/QA_confirm"
-                android:padding="10dp"
+                android:padding="@dimen/View8dp"
                 android:text="@string/next_QA"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
@@ -103,7 +103,7 @@
             android:layout_height="wrap_content">
             <TextView
                 android:id="@+id/page_QA"
-                android:textSize="10dp"
+                android:textSize="@dimen/Text10sp"
                 android:hint="0 / 3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
