--- a/app/src/main/res/layout/show_match.xml
+++ b/app/src/main/res/layout/show_match.xml
@@ -2,8 +2,7 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    >
+    android:layout_height="match_parent">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -18,7 +17,6 @@
             android:textAlignment="center"
             android:textColor="@color/text_black_gray"
             android:textSize="@dimen/Text20sp" />
-
 
         <FrameLayout
             android:layout_width="match_parent"
@@ -38,7 +36,6 @@
                 android:id="@+id/textBig"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-
                 android:includeFontPadding="false"
                 android:shadowColor="#80FFB700"
                 android:shadowDx="2"
@@ -54,7 +51,7 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="5dp"
+            android:layout_marginBottom="@dimen/View4dp"
             android:gravity="bottom"
             android:orientation="horizontal"
             app:layout_constraintBottom_toTopOf="@+id/mess"
@@ -98,9 +95,9 @@
             android:layout_width="0dp"
             android:layout_height="50dp"
             android:layout_above="@+id/io"
-            android:layout_marginLeft="18dp"
-            android:layout_marginRight="18dp"
-            android:layout_marginBottom="10dp"
+            android:layout_marginLeft="@dimen/View16dp"
+            android:layout_marginRight="@dimen/View16dp"
+            android:layout_marginBottom="@dimen/View8dp"
             android:background="@drawable/roundlike"
             android:text="@string/send_message"
             android:textSize="@dimen/Text16sp"
@@ -116,7 +113,7 @@
             android:layout_alignParentStart="true"
             android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"
-            android:layout_marginBottom="15dp"
+            android:layout_marginBottom="@dimen/View16dp"
             android:elevation="10dp"
             android:gravity="center"
             android:shadowColor="#80292929"
