--- a/app/src/main/res/layout/show_open_gps.xml
+++ b/app/src/main/res/layout/show_open_gps.xml
@@ -11,10 +11,10 @@
         android:layout_height="wrap_content"
         android:layout_marginRight="@dimen/View40dp"
         android:layout_marginLeft="@dimen/View40dp"
-        android:layout_marginBottom="12dp"
+        android:layout_marginBottom="@dimen/View12dp"
         android:gravity="center"
         android:textColor="@color/text_black_gray"
-        android:textSize="24sp"
+        android:textSize="@dimen/Text16sp"
         android:text="@string/apologize"
         />
     <TextView
@@ -30,7 +30,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="@dimen/View20dp"
         android:text="@string/tryAgian"
         android:textSize="@dimen/Text14sp"
         android:textColor="@color/cpb_white"
