--- a/app/src/main/res/layout/vip_page1.xml
+++ b/app/src/main/res/layout/vip_page1.xml
@@ -9,12 +9,12 @@
    >
     <ImageView
         android:id="@+id/image_vip"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="98dp"
+        android:layout_height="98dp"
 
         />
     <TextView
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="@dimen/View20dp"
         android:id="@+id/text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
